<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".NewsSelection">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="232dp"
        android:layout_height="118dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="29dp"
        android:layout_height="37dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_category"
        android:textColor="#2196F3"
        android:textSize="18sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toTopOf="@+id/btnCIIT"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.666" />

    <Button
        android:id="@+id/btnSports"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="@string/sports"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.994" />

    <Button
        android:id="@+id/btnEntertainment"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="@string/entertainment"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <Button
        android:id="@+id/btnCIIT"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="CIIT MEDIA"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <Button
        android:id="@+id/btnTechnology"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="@string/technology"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801" />

    <Button
        android:id="@+id/btnScience"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="Science"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <Button
        android:id="@+id/btnFeatured"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="@string/featured_news"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/btnHealth"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="Health"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/btnBusiness"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:gravity="start|center_vertical"
        android:paddingLeft="15dip"
        android:text="@string/business"
        android:textColor="#2196f3"
        android:textSize="24sp"
        app:fontFamily="@font/alegreya_sc_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

</androidx.constraintlayout.widget.ConstraintLayout>