<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/btnBack3"
            android:layout_width="29dp"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/viewPagerGlobalization"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/back" />
        <ImageView
            android:id="@+id/imageViewGlobe"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="About"
            android:textColor="#2196F3"
            android:textSize="35dp"
            app:fontFamily="@font/alegreya_sc"
            app:layout_constraintVertical_bias="0.0"
            />

        <TextView
            android:id="@+id/abt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:justificationMode="inter_word"
            android:text="@string/about"
            android:textColor="#534E4E"
            android:textSize="15dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="Developer"
        android:textColor="#2196F3"
        android:textSize="35dp"
        app:fontFamily="@font/alegreya_sc"
        app:layout_constraintVertical_bias="0.0"
        />
        <TextView
            android:id="@+id/developer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:justificationMode="inter_word"
            android:text="@string/developer"
            android:textColor="#534E4E"
            android:textSize="15dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="Disclaimer"
            android:textColor="#2196F3"
            android:textSize="35dp"
            app:fontFamily="@font/alegreya_sc"
            app:layout_constraintVertical_bias="0.0"
            />
        <TextView
            android:id="@+id/disclaimer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:justificationMode="inter_word"
            android:text="@string/disclaimer"
            android:textColor="#534E4E"
            android:textSize="15dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/references"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="References"
            android:textColor="#2196F3"
            android:textSize="35dp"
            app:fontFamily="@font/alegreya_sc"
            app:layout_constraintVertical_bias="0.0"
            />
        <TextView
            android:id="@+id/references2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:justificationMode="inter_word"
            android:text="@string/references"
            android:textColor="#534E4E"
            android:textSize="15dp"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>
</ScrollView>
